# coldread

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
client/: index.html  package-lock.json  package.json  vitest.config.ts
client/src/: constants.ts  main.tsx  types.ts
client/src/api/: client.ts  pipeline.ts
client/src/app/: App.tsx  routes.tsx
client/src/components/: ResumeGenerator.module.css  (+5 more)
server/: .env.example  Makefile  config.py  main.py  models.py  pyproject.toml
server/api/: dependencies.py  jds.py  routes.py
server/auth/: __init__.py
server/db/: client.py  fit_reports.py  job_descriptions.py  narratives.py  prompts.py  resume_variants.py  resumes.py
server/features/: export.py  fit_assessment.py  heatmap.py  interview_prep.py  resume_generation.py
server/pipeline/: anthropic_utils.py  authenticity_review.py  fit_assessment.py  generator.py  prompt_loader.py  refinement.py  revaluator.py  screener.py
server/security/: __init__.py  injection_detection.py
server/seeds/: seed_narratives.py  seed_prompts.py
server/tests/: test_jds.py  test_narratives.py
server/tests/features/: test_fit_assessment.py  test_resume_generation.py
server/tests/pipeline/: test_anthropic_utils.py  test_fit_assessment.py  test_generator.py  test_refinement.py  test_screener.py
supabase/migrations/: 001_initial_schema.sql  002_jd_pipeline_tables.sql  003_add_contact_info_to_narratives.sql  004_add_contact_info_to_resume_variants.sql  20260326_enable_rls.sql  20260329_fix_prompts_rls.sql
(+66 files in other folders)
